* Rewrote skin list processing to provide a more realistic tree, removed $level parameter, etc. (Themes.php, ManageBoards.template.php, Themes.template.php) ! wetem::$has_layer was set wrongly when providing an empty layer. Also documented wetem::layer(), FWIW. (Subs-Template.php) + Added variables to allow setting up custom fonts for blog posts. (sections.css) ! Not really fixable, but at east muted the dns_get_record error that could happen when visiting a profile on some servers. (Subs.php) ! Credits page was missing a linktree. (Credits.php) * Linktrees had a bit too much space below them, I'd say... (index.css) - Forgot to remove a setting after rewriting the group title hiding code. (Settings.template.php) - Commenazi. (Aeva-Subs-Vital.php)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -241,7 +241,7 @@ ul#noava
 #linktree
 	clear: both
 	color: #999
-	padding: 0 0 1.5em
+	padding: 0 0 1em
 	a
 		color: #963
 	ul
@@ -1662,6 +1662,8 @@ $subject_font = "PT Sans", "Segoe UI", Optima, Arial, sans-serif
 
 $post_font_size = 100%/133%
 $post_font = Arial, sans-serif
+$blog_font_size = 100%/140%
+$blog_font = $post_font
 
 $bevel = ", url($images/theme/bevel.png) $button_gradient"
 $bevel {ie6,ie7,ie8} = ""
